fix pyside compilation for android

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,17 @@ project(pysidebindings)
 cmake_minimum_required(VERSION 2.6)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Macros/
                       ${CMAKE_MODULE_PATH})
-find_package(Shiboken 1.1.1 REQUIRED)
+if (android)
+    SET(SHIBOKEN_INCLUDE_DIR "/home/ssorgatem/pyside-android-sandbox/include/shiboken")
+    SET(SHIBOKEN_LIBRARY "/home/ssorgatem/pyside-android-sandbox/lib/libshiboken-python2.7.so")
+    SET(SHIBOKEN_PYTHON_INCLUDE_DIR "${PYTHON_INCLUDE_PATH}")
+    SET(SHIBOKEN_PYTHON_INTERPRETER "${PYTHON_EXECUTABLE}")
+    SET(SHIBOKEN_PYTHON_LIBRARIES "/home/ssorgatem/pyside-android/python-for-android/dist/default/libs/armeabi/libpython2.7.so")
+    SET(SHIBOKEN_PYTHON_BASENAME "python2.7")
+    set(SHIBOKEN_BINARY "/home/ssorgatem/pyside-android-sandbox/bin/shiboken")
+else()
+    find_package(Shiboken 1.1.1 REQUIRED)
+endif()
 find_package(Qt4 4.5.0 REQUIRED)
 find_file(GL_H "gl.h" PATH_SUFFIXES "GL")
 include(FindQt4Extra)
@@ -104,6 +114,8 @@ elseif(Q_WS_WIN)
 elseif(Q_WS_SIMULATOR)
     set(ENABLE_SIMULATOR "1")
     set(AUTO_OS "simulator")
+elseif(android)
+    set(AUTO_OS "android")
 else()
     message(FATAL_ERROR "OS not supported")
 endif()
@@ -161,19 +173,21 @@ else()
 endif()
 
 add_subdirectory(libpyside)
-if(QT_QTUITOOLS_FOUND AND QT_QTDESIGNER_FOUND)
+if(QT_QTUITOOLS_FOUND AND QT_QTDESIGNER_FOUND AND NOT android)
     add_subdirectory(plugins)
 endif()
 # project directories
 add_subdirectory(PySide)
-if (BUILD_TESTS)
-    enable_testing()
-    add_subdirectory(tests)
-endif ()
+if (NOT android)
+    if (BUILD_TESTS)
+        enable_testing()
+        add_subdirectory(tests)
+    endif ()
 
-find_program(DOT_EXEC dot)
-if (QT_SRC_DIR AND DOT_EXEC)
-    add_subdirectory(doc)
-else ()
-    message(STATUS "QT_SRC_DIR variable not set or graphviz not found, apidoc generation targets disabled.")
+    find_program(DOT_EXEC dot)
+    if (QT_SRC_DIR AND DOT_EXEC)
+        add_subdirectory(doc)
+    else ()
+        message(STATUS "QT_SRC_DIR variable not set or graphviz not found, apidoc generation targets disabled.")
+    endif()
 endif()
