--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Macros/
                       ${CMAKE_MODULE_PATH})
 if (android)
     SET(SHIBOKEN_INCLUDE_DIR "/home/ssorgatem/pyside-android-sandbox/include/shiboken")
-    SET(SHIBOKEN_LIBRARY "/home/ssorgatem/pyside-android-sandbox/lib/libshiboken-python2.7.so")
+    SET(SHIBOKEN_LIBRARY "/home/ssorgatem/pyside-android-sandbox/lib/libshiboken.so")
     SET(SHIBOKEN_PYTHON_INCLUDE_DIR "${PYTHON_INCLUDE_PATH}")
     SET(SHIBOKEN_PYTHON_INTERPRETER "${PYTHON_EXECUTABLE}")
     SET(SHIBOKEN_PYTHON_LIBRARIES "/home/ssorgatem/pyside-android/python-for-android/dist/default/libs/armeabi/libpython2.7.so")
     SET(SHIBOKEN_PYTHON_BASENAME "python2.7")
-    set(SHIBOKEN_BINARY "/home/ssorgatem/pyside-android-sandbox/bin/shiboken")
+    set(SHIBOKEN_BINARY "/usr/bin/shiboken")
 else()
     find_package(Shiboken 1.1.1 REQUIRED)
 endif()
