--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,9 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Macros/
                       ${CMAKE_MODULE_PATH})
 if (android)
-    SET(SHIBOKEN_INCLUDE_DIR "/home/ssorgatem/pyside-android-sandbox/include/shiboken")
-    SET(SHIBOKEN_LIBRARY "/home/ssorgatem/pyside-android-sandbox/lib/libshiboken.so")
     SET(SHIBOKEN_PYTHON_INCLUDE_DIR "${PYTHON_INCLUDE_PATH}")
     SET(SHIBOKEN_PYTHON_INTERPRETER "${PYTHON_EXECUTABLE}")
-    SET(SHIBOKEN_PYTHON_LIBRARIES "/home/ssorgatem/pyside-android/python-for-android/dist/default/libs/armeabi/libpython2.7.so")
+    SET(SHIBOKEN_PYTHON_INTERPRETER "/usr/bin/python2.7")
     SET(SHIBOKEN_PYTHON_BASENAME "python2.7")
     set(SHIBOKEN_BINARY "/usr/bin/shiboken")
 else()
